- Add a border radius of 0.5em to the iframes. - Add social media meta tags added in the last build, can you take a look and make sure they're really there? not sure if you couldn't see them or not - Add favicon - Make the footer links be a ul (although still go horizontally) - Add a subtitle above the footer links Subtitles are weird, I could just remove the other subtitle and make it even, but at this exact moment I haven't been able to figure out a way of doing this in a column without pushing everything down - Add a date for blog posts below the blog titles, and add little separators between posts - Add a bit of a transition for links on hover - Add a bit of animation for the topnav links where the underline goes out from center. (This may be of use https://paulund.co.uk/css-animation-link-underline) - Fix white on white mobile menu for topnav links - Fix align for mobile footer links (screenshot below) Not sure how to fix it. Seems to be all on Jekyll's end and not the CSS...:thinking: - remove the unique visited colour - animated loading iframe screens

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -112,13 +112,9 @@ a {
   color: #6d99ff;
   text-decoration: none;
 
-  &:visited {
-    color: darken(#6d99ff, 15%);
-  }
-
   &:hover {
     color: $text-color;
-    text-decoration: underline;
+    text-decoration: none;
   }
 
   .social-media-list &:hover {
@@ -128,6 +124,28 @@ a {
       text-decoration: underline;
     }
   }
+}
+a
+{
+    position: relative;
+}
+
+a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #FFF;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 
@@ -258,4 +276,8 @@ table {
   td {
     border: 1px solid $grey-color-light;
   }
+}
+
+.airtable-embed {
+  border-radius: 0.5em;
 }
