--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -20,10 +20,6 @@
   color: white;
   font-family: 'Courier Prime';
 
-  &,
-  &:visited {
-    color: white;
-  }
 }
 
 .site-nav {
@@ -53,10 +49,10 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    border: 2px solid black;
     border-radius: 5px;
     text-align: right;
-
+    
     label[for="nav-trigger"] {
       display: block;
       float: right;
@@ -65,6 +61,8 @@
       z-index: 2;
       cursor: pointer;
     }
+
+
 
     .menu-icon {
       display: block;
@@ -93,7 +91,7 @@
     .page-link {
       display: block;
       padding: 5px 10px;
-
+      color: black;
 
       &:not(:last-child) {
         margin-right: 0;
@@ -166,6 +164,12 @@
     width: -webkit-calc(100% - (#{$spacing-unit} / 2));
     width:         calc(100% - (#{$spacing-unit} / 2));
   }
+  .hiddenlink {
+    display:block;
+  }
+  .shownlink {
+    display: none;
+  }
 }
 
 @include media-query($on-palm) {
@@ -174,8 +178,17 @@
     width: -webkit-calc(100% - (#{$spacing-unit} / 2));
     width:         calc(100% - (#{$spacing-unit} / 2));
   }
+  .hiddenlink {
+    display:block;
+  }
+  .shownlink {
+    display: none;
+  }
 }
 
+.hiddenlink {
+  display:none;
+}
 
 
 /**
@@ -279,4 +292,10 @@
 .content {
   padding: .5rem .75rem;
   text-align: center;
+}
+
+// Misc
+
+.holds-the-iframe {
+  background:url('https://miro.medium.com/max/882/1*9EBHIOzhE1XfMYoKz1JcsQ.gif') center center no-repeat;
 }
